# OCRReader2

./: 1.py  README.md  project_manager.py  project_settings.py  pyproject.toml
src/: 1.py  box_debugger.py  box_properties.py  line_break_editor.py  main.py  model_trainer_window.py  ocr_editor.py  ocr_processor.py  ocrreader2.py  page_editor.py  project.py  settings.py  settings_test.py
src/OCRReader2/: 1.py  OCRReader2.py  __init__.py  box_debugger.py  box_properties.py  image_viewer_test.py  main.py  model_trainer_window.py  ocr_editor.py  ocr_processor.py  page_editor.py  settings_test.py  view_test.py
src/data/: default_application_settings.json  default_project_settings.json
src/exporter/: export_dialog.py  exporter.py  exporter_epub.py  exporter_html.py  exporter_html_based.py  exporter_html_simple.py  exporter_md.py  exporter_odt.py  exporter_preview.py  exporter_txt.py  exporter_widget.py
src/line_break_editor/: line_break_controller.py  line_break_dialog.py  line_break_helper.py  line_break_table.py  ocr_edit_controller.py  ocr_edit_dialog.py  part_info.py  test_block.json  token.py
src/main_window/: actions.py  box_properties_widget.py  default_project_settings.json  default_settings.json  main_window.py  menus.py  model_training_actions.py  page_actions.py  page_icon_view.py  project_actions.py  toolbar.py  user_actions.py
src/model_trainer/: custom_text_editor.py  line_exporter.py  model_trainer.py  (+1 more)
tests/: box_test.py  export_test.py  general_test.py  ocr_results_test.py  page_test.py  project_manager_test.py  save_load_test.py
(+140 files in other folders)
