[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "tests", "src/OCRReader2", "tests/OCRReader2",
]

[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]
authors = [
  {name = "Andre Jonas", email = "nipsky@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = ""
dynamic = ["dependencies"]
name = "OCRReader2"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.urls]
"Bug Tracker" = "https://github.com/knochenhans/OCRReader2/issues"
"Homepage" = "https://github.com/knochenhans/OCRReader2"

[tool.hatch.build]
exclude = [
  ".mypy_cache",
  ".vscode",
]

[tool.hatch.build.targets.wheel]
packages = ["src/OCRReader2"]
include = ["src/OCRReader2/py.typed"]

# [tool.hatch.metadata.hooks.requirements_txt]
# files = ["requirements.txt"]